Add Figaro for Security

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,3 +1,7 @@
 @import "alert";
 @import "avatars";
 @import "badges";
+@import "cards";
+@import "products";
+@import "share_links";
+@import "media_layout";
