--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -23,3 +23,33 @@
 .bg-dark-blue {
   background: #3b5998;
 }
+
+.bam{
+  width:100%;
+  background-color:#fff;
+  border-radius: 4px;
+  padding:20px;
+  -moz-box-shadow: 0 0 8px rgba(0,0,0,.16);
+  -webkit-box-shadow: 0 0 8px rgba(0,0,0,.16);
+  box-shadow: 0 0 8px rgba(0,0,0,.16);
+  h1{
+    margin:0px 0px 30px 0px;
+    padding:0;
+    font-size:32px;
+    color:#333;
+    text-align: center
+  }
+  p{
+    color:#666;
+  }
+  form{
+    padding: 20px 50px;
+    label{
+      margin-right: 10px;
+    }
+    .form-group{
+      margin-bottom: 20px;
+    }
+  }
+}
+
