fixed photo-upload in form

--- a/app/views/cocktails/_form.html.erb
+++ b/app/views/cocktails/_form.html.erb
@@ -3,6 +3,8 @@
 
   <div class="form-inline" style="margin-top: 10px;">
     <%= f.input :name, label: "Name: " %>
+    <%= f.input :photo %>
+    <%= f.input :photo_cache, as: :hidden %>
   </div>
 
 
