Fixed Image Issue

--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -5,7 +5,7 @@
     <% @cocktails.each do |cocktail| %>
 
       <div class="col-xs-12 col-sm-4" style="margin: 20px, 0;">
-        <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= cl_image_path @product.photo, crop: :fill, gravity: "center" %>');">
+        <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= cl_image_path cocktail.photo, height: 300, width: 400, crop: :fill %>');">
           <div class="card-description">
             <h2><%= cocktail.name %></h2>
             <p style="color: white;">Great for Summer.</p>
