--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,8 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+<!--     <%= cloudinary_js_config %>
+ -->  </head>
 
   <body style="background-image: url(<%= asset_path 'bg.png' %>);">
     <%= render partial: "layouts/navbar"%>
