--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -50,7 +50,24 @@
     .form-group{
       margin-bottom: 20px;
       margin-right: 20px;
-
+    }
+    .attachinary-input{
+      width: 90px;
+    }
+    .cocktail_photo{
+      display: flex;
+    }
+    .attachinary_container{
+      ul{
+        margin-top: 0;
+        margin-bottom: 11px;
+        padding-left: 0px;
+        list-style: none;
+        margin-left: 20px;
+      }
+      img{
+        display: block;
+      }
     }
   }
 }
