--- a/app/views/cocktails/_form.html.erb
+++ b/app/views/cocktails/_form.html.erb
@@ -1,7 +1,7 @@
 <%= simple_nested_form_for(@cocktail) do |f| %>
   <%= f.error_notification %>
 
-  <div class="form-inline" style="margin-top: 10px;">
+  <div class="form-inline" style="margin-top: 10px; display: flex;">
     <%= f.input :name, label: "Name: " %>
     <%= f.input :photo %>
     <%= f.input :photo_cache, as: :hidden %>
